# 923-4FSC0PF003-CityBuilder

./: .gitignore  CMakeLists.txt  README.md  main.cc  vcpkg.json
api/: CMakeLists.txt
api/include/: enum.h  save_system.h  sfml_utils.h  utils.h
api/include/behaviour_tree/: leaf.h  node.h  selector.h  sequence.h  tree.h
api/include/gameplay/: building.h  building_manager.h  economy_manager.h  view.h
api/include/gameplay/ai/: gatherer.h  miner.h  villager_manager.h  walker.h  woodsman.h
api/include/graphics/: ResourceManager.h  Tilemap.h  fade_tilemap.h  resource_manager.h  sprite_entity.h
api/include/pathfinding/: path.h  pathfinder.h
api/include/ui/: UiButton.h  cursor.h  cursor_change.h  textbox.h  ui_button.h
api/include/world_generation/: tile.h  tilemap.h  wfc.h
api/src/: save_system.cc
api/src/behaviour_tree/: leaf.cc  node.cc  selector.cc  sequence.cc  tree.cc
api/src/gameplay/: building.cc  building_manager.cc  economy_manager.cc  view.cc
api/src/gameplay/ai/: gatherer.cc  miner.cc  villager_manager.cc  walker.cc  woodsman.cc
api/src/graphics/: ResourceManager.cc  Tilemap.cc  fade_tilemap.cc  resource_manager.cc  sprite_entity.cc
api/src/pathfinding/: path.cc  pathfinder.cc
api/src/ui/: UiButton.cc  cursor.cc  textbox.cc  ui_button.cc
api/src/world_generation/: tile.cc  tilemap.cc  wfc.cc
core/: CMakeLists.txt
core/include/containers/: basic_vector.h  fixed_queue.h  fixed_stack.h  queue.h  small_vector.h  stack.h  vector.h
core/include/maths/: vec2f.h  vec2i.h
core/include/structures/: queue.h  stack.h
core/test/: test_basic_vector.cc  test_fixed_queue.cc  test_fixed_stack.cc  test_queue.cc  test_small_vector.cc  test_stack.cc  test_vec2f.cc  test_vec2i.cc  test_vector.cc
game/: CMakeLists.txt
game/include/: game.h  tile.h
game/src/: game.cc
